Collapse/Expand should now work properly. thanks @ arion_p Also removed the icon from the show/hide message. thanks @ arion_p

--- a/_BuildReport_Files/BuildReport.css
+++ b/_BuildReport_Files/BuildReport.css
@@ -104,6 +104,11 @@ address {
 
 li.show-messages {
   display: none;
+  list-style: none;
+}
+
+li.hide-messages {
+  list-style: none;
 }
 
 .collapsed li {
